March 13, 2006
  - Made operator=, operator== and operator!= of CTCLChannel private as there
    are no implementations.
March 16, 2006
  - Added extensive XML based manpages for the tclPlus CTCL class
    library.
  - Support pre/post command functions for CTCLProcessor.
    this is used in nscldaq to implement the CDAQTCLProcessor.
  - Need to implement CTCLProcssor::Bind to bind itself and the adaptor.
March 20, 2006
  - Added a bit more error checking/reporting to spectrum creation gui.
March 22, 2006
  - Fixed an error in 1-d spectrum creation.. syntax 
March 30, 2006
  - Credit D. Bazin with concept of treeparameter in treeparam C++ sources.
April 17, 2006
  - Fix some 64 bit uncleanliness in Xamine so SpecTcl/Xamine can run
    reliably on 64bit systems in 64bit mode.
April 18, 2006
  - Old method of long titles did not work very well as it made
    old .win files worthless.
April 20, 2006
  - Fix error in sourcing file from GUI.. file should execute at global level.
April 21, 2006
  - Add buffersize selector to event source dialogs.
April 23, 2006
  - Fix typos in  event source dialogs buffersize stuff.
  - Add many credits.
April 26, 2006
  - Added screen dump based printing for the A1900 group and the
    KSU folks who want a wysiwyg printing mechanism.
May 23, 2006
  - Fix defect 195,196: gri was emitting epsf which caused multiple pages
    to smoosh onto a single page, printer.cc: Print setup dialog had a
    widget that duplicated the name of another widget causing it to operate
    funny.
SpecTcl-3.1-001
   - Try to make the docbook builds more robust even in the presence of missing
     or broken(?) docbook installs.
   - configure for libgd.

SpecTcl 3.2-pre1 starts.
  June 20, 2006 defect 206:  Check parameter validity in mask gates.
                             Catch exceptions while histogramming
                Defect 197:  Averaging reduction boxes too large by 
                             1 channel in x.              